--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <style>
-       li{
-         color:red;font-size:120px;
-         text-decoration:underline;
-       }
-       #select{
-         font-size:200px;
-       }
-       .deactive{
-         font-size:100;
-         text-decoration: line-through;
-       }
-      </style>
-    </head>
-    <body>
-      <h1 id="select">수업의 순서</h1>
-      <ul>
-        <li class="deactive">HTML</li>
-        <li id="select">CSS</li>
-        <li class="deactive">JavaScript</li>
-     </ul>
-   </body>
+  <head>
+  	<meta charset="UTF-8">
+  	<meta name="viewport" content="width=device-width",initial-scale="1">
+  	<title>kongson</title>
+  	<link rel="stylesheet" href="css/bootstrap.css">
+  </head>
+  <body>
+       <div class="container">
+       	   <div class="jumbotron">
+       	   	 <h1 class="text-center">kongson을 소개합니다.</h1>
+       	   	 <p class="text-center">kongson은 현재 친적집에 갑니다.</h1>
+       	   	 <p class="text-center"><a class="btn btn-primary btn-lg" href="#" role="button">용돈 받으러 갑니다.</a></p>
+  </body>
 </html>
