--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
   	<meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width",initial-scale="1">
   	<title>kongson</title>
-  	<link rel="stylesheet" href="bootstrap.css">
+  	<link rel="stylesheet" href="css/bootstrap.css">
   </head>
   <body>
+  	   <style type="text/css">
+  	   	  .jumbotron{
+  	   	  	  background-image: url('images/jumbotronBackground.jpg');
+  	   	  	  background-size: cover;
+  	   	  	  text-shadow: black 0.2em 0.2em 0.2em;
+  	   	  	  color: white;
+  	   	  }
+  	   	</style>
        <div class="container">
        	   <div class="jumbotron">
        	   	 <h1 class="text-center">kongson을 소개합니다.</h1>
