--- a/index.html
+++ b/index.html
@@ -15,10 +15,55 @@
   	   	  	  color: white;
   	   	  }
   	   	</style>
-       <div class="container">
+  	   	<nav class="navbar navbar-default">
+  	   		<div class="container-fluid">
+  	   			<div class="navbar-header">
+  	   				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+  	   				    data-target="#navbar-collapse-1">
+  	   				    <span class="sr-only"></span>
+  	   				    <span class="icon-bar"></span>
+  	   				    <span class="icon-bar"></span>
+  	   				    <span class="icon-bar"></span>
+  	   		        </button>
+  	   		        <a class="navbar-brand" href="#">kongson</a>
+  	   		    </div>
+  	   		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+  	   		    	<ul class="nav navbar-nav">
+  	   		    		<li class="active"><a href="#">소개<span class="sr-only"></span></a></li>
+  	   		    		<li><a href="#">키보드</a></li>
+  	   		    		<li class="dropdown">
+  	   		    			<a href="#" class="dropdown-toggle" data-toggle="droptown" role="button"
+  	   		    			    aria-haspopup="true" aria-expanded="false">콩손<span class="caret"></span></a>
+  	   		    			<ul class="dropdown-menu">
+  	   		    				<li><a href="#">키보드</a></li>
+  	   		    				<li><a href="#">스위치</a></li>
+  	   		    				<li><a href="#">키캡</a></li>
+  	   		    	</ul>
+  	   		    </li>
+  	   		    </ul>
+  	   		    <form class="navbar-form navbar-left">
+  	   		    	<div class="form-group">
+  	   		    		<input type="text" class="form-control" placeholder="내용을 입력하세요.">
+  	   		    	</div>
+  	   		    	<button type="submit" class="btn btn-default">검색</button>
+  	   		    </form>
+  	   		    <ul class="nav navbar-nav navbar-right">
+  	   		    	<li class="dropdown">
+  	   		    		<a href="#" class="dropdown-toggle" data-toggle="droptown" role="button"
+  	   		    			    aria-haspopup="true" aria-expanded="false">접속하기<span class="caret"></span></a>
+
+  	   		    	</li>
+  	   	        </div>
+  	   	    </div>
+        </nav>
+        <div class="container">
        	   <div class="jumbotron">
        	   	 <h1 class="text-center">kongson을 소개합니다.</h1>
-       	   	 <p class="text-center">kongson은 현재 친적집에 갑니다.</h1>
+       	   	 <p class="text-center">kongson은 현재 친적집에 갑니다.</p>
        	   	 <p class="text-center"><a class="btn btn-primary btn-lg" href="#" role="button">용돈 받으러 갑니다.</a></p>
+       	   	</div>
+       	</div>
+       	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+       	<script src="bootstrap.js"></script>
   </body>
 </html>
