--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   	   		<div class="container-fluid">
   	   			<div class="navbar-header">
   	   				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-  	   				    data-target="#navbar-collapse-1">
+  	   				    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
   	   				    <span class="sr-only"></span>
   	   				    <span class="icon-bar"></span>
   	   				    <span class="icon-bar"></span>
@@ -32,7 +32,7 @@
   	   		    		<li class="active"><a href="#">소개<span class="sr-only"></span></a></li>
   	   		    		<li><a href="#">키보드</a></li>
   	   		    		<li class="dropdown">
-  	   		    			<a href="#" class="dropdown-toggle" data-toggle="droptown" role="button"
+  	   		    	    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button"
   	   		    			    aria-haspopup="true" aria-expanded="false">콩손<span class="caret"></span></a>
   	   		    			<ul class="dropdown-menu">
   	   		    				<li><a href="#">키보드</a></li>
@@ -49,18 +49,22 @@
   	   		    </form>
   	   		    <ul class="nav navbar-nav navbar-right">
   	   		    	<li class="dropdown">
-  	   		    		<a href="#" class="dropdown-toggle" data-toggle="droptown" role="button"
+  	   		    		<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
   	   		    			    aria-haspopup="true" aria-expanded="false">접속하기<span class="caret"></span></a>
-
+  	   		    			    <ul class="dropdown-menu">
+  	   		    			    	<li><a href="#">로그인</a></li>
+  	   		    			    	<li><a href="#">회원가입</a></li>
+  	   		    			    </ul>
   	   		    	</li>
+  	   	          </ul>
   	   	        </div>
   	   	    </div>
         </nav>
         <div class="container">
        	   <div class="jumbotron">
        	   	 <h1 class="text-center">kongson을 소개합니다.</h1>
-       	   	 <p class="text-center">kongson은 현재 친적집에 갑니다.</p>
-       	   	 <p class="text-center"><a class="btn btn-primary btn-lg" href="#" role="button">용돈 받으러 갑니다.</a></p>
+       	   	 <p class="text-center">kongson은 키보드를 좋아합니다.</p>
+       	   	 <p class="text-center"><a class="btn btn-primary btn-lg" href="https://blog.naver.com/swoojin1126" role="button">kongson의 블로그</a></p>
        	   	</div>
        	</div>
        	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
