--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   	<meta name="viewport" content="width=device-width",initial-scale="1">
   	<title>kongson</title>
   	<link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="stlesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
   	   <style type="text/css">
