--- a/index.html
+++ b/index.html
@@ -67,7 +67,106 @@
        	   	 <p class="text-center">kongson은 키보드를 좋아합니다.</p>
        	   	 <p class="text-center"><a class="btn btn-primary btn-lg" href="https://blog.naver.com/swoojin1126" role="button">kongson의 블로그</a></p>
        	   	</div>
+       	   	<div class="row">
+       	   	    <div class="col-md-4">
+       	   		    <h4>키보드의 특징</h4>
+       	   		    <p>키보드는 말그대로 입력 장치지만 우리는 그 입력장치에서 즐거움을 찾을려고 합니다</p>
+       	   		    <p><a class="btn btn-default" data-target="#modal" data-toggle="modal">자세히 알아보기</a></p>
+       	   		</div>
+       	   		<div class="row">
+       	   	    <div class="col-md-4">
+       	   		    <h4>스테빌라이저의 특징</h4>
+       	   		    <p> 보통 키보드에서 긴 키들을 누를때 자연스럽게 눌릴수 있도록 도와줍니다</p>
+       	   		    <p><a class="btn btn-default" href="#">자세히 알아보기</a></p>
+       	   		</div>
+       	   		<div class="row">
+       	   	    <div class="col-md-4">
+       	   		    <h4>히오스의 특징</h4>
+       	   		    <p>유사 롤이라고 불리고 있으며 시공의 폭풍은 정말 최고야라는 명대사를 창출했습니다</p>
+       	   		    <p><a class="btn btn-default" href="#">자세히 알아보기</a></p>
+       	   		</div>    
+       	   	</div>
+       	   	<hr>	
        	</div>
+       	<hr>
+       	<div class="panel panel-primary">
+       		<div class="panel-heading">
+       			<h3 class="panel-title"><span class="glyphicon glyphicon-pencil"></span>
+       		    &nbsp;&nbsp;최신 키보드 목록</h3>
+       	    </div>
+       	    <div class="panel-body">
+       	    	<div class="media">
+       	    		<div class="media-left">
+       	    		    <a href="#"><img src="images/heroes of the storm.png" id="imagepreview" style="width: 64px; height: 64px;" alt="키보드 강의 이미지"></a>
+       	    		</div>
+       	    		<div class="media-body">
+       	    			<h4 class="media-heading"><a href="#">키보드 기초 강의</a>&nbsp;<span class="badge">New</span></h4>
+       	    			키보드는 종류가 매우 많고 생각보다 복잡합니다 사실상 기초 강의하나로는 이해하기 어려울수도 있는점 참고하시기 바랍니다.
+       	    	</div>
+       	    </div>
+       	    <div class="media">
+       	    		<div class="media-left">
+       	    		    <a href="#"><img src="images/heroes of the storm.png" id="imagepreview" style="width: 64px; height: 64px;" alt="키보드 강의 이미지"></a>
+       	    		</div>
+       	    		<div class="media-body">
+       	    			<h4 class="media-heading"><a href="#">스위치 기초 강의</a>&nbsp;<span class="badge">New</span></h4>
+       	    			스위치는 종류가 매우 많지만 구조는 생각보다 간단합니다. 물론 스위치 제각각 구조도 다 다르다는점 참고하시기 바랍니다.
+       	    	</div>
+       	    </div>
+       	    <div class="media">
+       	    		<div class="media-left">
+       	    		    <a href="lecture.html?name=android">
+       	    		    	<img class="media-object" src="images/heroes of the storm.png" id="imagepreview" style="width: 64px; height: 64px;" alt="키보드 강의 이미지"></a>
+       	    		</div>
+       	    		<div class="media-body">
+       	    			<h4 class="media-heading"><a href="#">스테빌라이저 기초 강의</a>&nbsp;<span class="badge">New</span></h4>
+       	    			스테빌라이저는 생각보다 종류가 한정되어 있습니다
+       	    	    </div>
+       	        </div>
+       	    </div>
+       	    </div>		
+       	</div>    			
+       	<footer style="background-color: #000000; color: #ffffff">
+       		<div class="container">
+       			<br>
+       			<div class="row">
+       			    <div class="col-sm-2" style="text-align: center;"><h5>Copyright &copy; 2019</h5><h5>콩손(kongson)</h5></div>
+       			    <div class="col-sm-4"><h4>매니저 소개</h4><p>매니저는 바로 잼으로 특징은 딸기잼을 좋아한다</p></div>
+       			    <div class="col-sm-2"><h4 style="text-align: center;">스테빌라이저</h4>
+       			    	<div class="list-group">
+       			    		<a href="#" class="list-group-item">소개</a>
+       			    		<a href="https://www.youtube.com/watch?v=zeSRfcy3HkA" class="list-group-item">윤활법</a>
+       			    		<a href="#" class="list-group-item">장착법</a>
+       			    	</div>
+       			    </div>
+       			    <div class="col-sm-2"><h4 style="text-align: center;">스위치</h4>
+       			    	<div class="list-group">
+       			    		<a href="#" class="list-group-item">소개</a>
+       			    		<a href="https://www.youtube.com/watch?v=j1X0sDiNEtk" class="list-group-item">윤활법</a>
+       			    		<a href="#" class="list-group-item">종류</a>
+       			    	</div>
+       			    </div>
+       			    <div class="col-sm-2"><h4 style="text-align: center;"><span class="glyphicon glyphicon-ok"></span>by 콩손</h4></div>
+                </div>
+            </div>
+        </footer>
+        <div class="row">
+        	<div class="modal" id="modal" tabindex="-1">
+        		<div class="modal-dialog">
+        			<div class="modal-content">
+        				<div class="modal-header">
+        					키보드의 특징
+        					<button class="close" data-dismiss="modal">&times;</button>
+        				</div>
+        				<div class="modal-body" style="text-align: center;">
+        					히오스를 하면 그 즐거움이 배가 됩니다 히오스를 합시다.<br>
+        					히오스는 블리자드 게임으로 오버워치 세계관과 공유합니다<br><br>
+        					<img src="images/heroes of the storm.png" id="imagepreview" style="width: 256px; height: 256px;">
+        			    </div>
+        			</div>
+        	    </div>
+        	</div>
+        </div>
        	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
        	<script src="bootstrap.js"></script>
   </body>
