--- a/index.html
+++ b/index.html
@@ -74,27 +74,22 @@
        	   	    <div class="col-md-4">
        	   		    <h4>키보드의 특징</h4>
        	   		    <p>키보드는 말그대로 입력 장치지만 우리는 그 입력장치에서 즐거움을 찾을려고 합니다</p>
-       	   		    <p><a class="btn btn-default" data-target="#modal" data-toggle="modal">자세히 알아보기</a></p>
+       	   		    <p><a class="btn btn-default" data-target="#modal1" data-toggle="modal">자세히 알아보기</a></p>
        	   		 
        	     	</div>
-                    <div class="row">
-       	   	         <div class="col-md-4">
+       	     	<div class="col-md-4">
        	   		        <h4>스테빌라이저의 특징</h4>
        	   		        <p>보통 키보드에서 긴 키들을 누를때 자연스럽게 눌릴수 있도록 도와줍니다</p>
-       	   		        <p><a class="btn btn-default" href="#">자세히 알아보기</a></p>
-       	   		 
-       	   	    </div>
-       	   		<div class="row">
-       	   	    <div class="col-md-4">
+       	   		        <p><a class="btn btn-default" data-target="#modal2" data-toggle="modal">자세히 알아보기</a></p>
+       	   		 </div>
+       	   		<div class="col-md-4">
        	   		    <h4>스위치의 특징</h4>
        	   		    <p>보통 기계식 스위치는 접점부와 슬라이더 스프링으로 이루어져 있습니다</p>
-       	   		    <p><a class="btn btn-default" href="#">자세히 알아보기</a></p>
+       	   		    <p><a class="btn btn-default" data-target="#modal3" data-toggle="modal">자세히 알아보기</a></p>
        	   		</div>    
        	   	  </div>
        	    <hr>
-       	    </div>
-
-       	<div class="panel panel-primary">
+       	    <div class="panel panel-primary">
        		<div class="panel-heading">
        			<h3 class="panel-title"><span class="glyphicon glyphicon-pencil"></span>
        		    &nbsp;&nbsp;최신 키보드 목록</h3>
@@ -109,6 +104,7 @@
        	    			키보드는 종류가 매우 많고 생각보다 복잡합니다 사실상 기초 강의하나로는 이해하기 어려울수도 있는점 참고하시기 바랍니다.
        	    	</div>
        	    </div>
+       	    <hr>
        	    <div class="media">
        	    		<div class="media-left">
        	    		    <a href="lecture.html?lectureName=switch"><img src="images/monster.jpg" id="imagepreview" style="width: 90px; height: 64px;" alt="키보드 강의 이미지"></a>
@@ -118,6 +114,7 @@
        	    			스위치는 종류가 매우 많지만 구조는 생각보다 간단합니다. 물론 스위치 제각각 구조도 다 다르다는점 참고하시기 바랍니다.
        	    	</div>
        	    </div>
+       	    <hr>
        	    <div class="media">
        	    		<div class="media-left">
        	    		    <a href="lecture.html?lectureName=stablizer">
@@ -136,7 +133,7 @@
        			<br>
        			<div class="row">
        			    <div class="col-sm-2" style="text-align: center;"><h5>Copyright &copy; 2019</h5><h5>콩손(kongson)</h5></div>
-       			    <div class="col-sm-4"><h4>매니저 소개</h4><p>매니저는 바로 잼으로 특징은 딸기잼을 좋아한다</p></div>
+       			    <div class="col-sm-3"><h4>매니저 소개</h4><p>매니저는 바로 잼으로 특징은 딸기잼을 좋아한다</p></div>
        			    <div class="col-sm-2"><h4 style="text-align: center;">스테빌라이저</h4>
        			    	<div class="list-group">
        			    		<a href="#" class="list-group-item">소개</a>
@@ -162,7 +159,7 @@
             </div>
         </footer>
         <div class="row">
-        	<div class="modal" id="modal" tabindex="-1">
+        	<div class="modal" id="modal1" tabindex="-1">
         		<div class="modal-dialog">
         			<div class="modal-content">
         				<div class="modal-header">
@@ -170,9 +167,46 @@
         					<button class="close" data-dismiss="modal">&times;</button>
         				</div>
         				<div class="modal-body" style="text-align: center;">
-        					히오스를 하면 그 즐거움이 배가 됩니다 히오스를 합시다.<br>
-        					히오스는 블리자드 게임으로 오버워치 세계관과 공유합니다<br><br>
-        					<img src="images/heroes of the storm.png" id="imagepreview" style="width: 256px; height: 256px;">
+        					보통 사람들의 키보드에 대한 인식은 단순 입력장치에 불과합니다<br>
+        					그리고 그 키보드에 돈을 투자하고 꾸미는것을 마땅해 하지 않습니다<br>
+        					저는 그것에 대해 불만이 많습니다!<br><br>
+        					<img src="images/monster.jpg" id="imagepreview" style="width: 455px; height: 256px;">
+        			    </div>
+        			</div>
+        	    </div>
+        	</div>
+        </div>
+        <div class="row">
+        	<div class="modal" id="modal2" tabindex="-1">
+        		<div class="modal-dialog">
+        			<div class="modal-content">
+        				<div class="modal-header">
+        					키보드의 특징
+        					<button class="close" data-dismiss="modal">&times;</button>
+        				</div>
+        				<div class="modal-body" style="text-align: center;">
+        					보통 큰 키를 누를때 뭔가 철심소리가 들리실 겁니다<br>
+        					큰 키들의 아예 좌측 혹은 우측을 눌러보시면 더 잘 들리고 느낌도 사뭇 다릅니다<br>
+        					그게 바로 스테빌라이저라는 부품이 있어서 입니다<br><br>
+        					<img src="images/monster.jpg" id="imagepreview" style="width: 455px; height: 256px;">
+        			    </div>
+        			</div>
+        	    </div>
+        	</div>
+        </div>
+        <div class="row">
+        	<div class="modal" id="modal3" tabindex="-1">
+        		<div class="modal-dialog">
+        			<div class="modal-content">
+        				<div class="modal-header">
+        					키보드의 특징
+        					<button class="close" data-dismiss="modal">&times;</button>
+        				</div>
+        				<div class="modal-body" style="text-align: center;">
+        					기계식 스위치는 종류가 매우 많습니다<br>
+        					보통 접점부와 슬라이더로 이루어져 있습니다<br>
+        					우리나라에서 대중적인 스위치로는 오테뮤와 체리가 있습니다<br><br>
+        					<img src="images/monster.jpg" id="imagepreview" style="width: 455px; height: 256px;">
         			    </div>
         			</div>
         	    </div>
