--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <span class="box-words-wrapper">
                         <a href="outro/index.html">
                         <b class="is-visible">키보드란,</b>
-                        <b>무엇인가.</b>
+                        <b>무엇일까?</b>
                         
                         
                     </span>
