--- a/outro/index.html
+++ b/outro/index.html
@@ -3,18 +3,18 @@
   <head>
   	<meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width",initial-scale="1">
-  	<title>kongson</title>
+  	<title>키보드란 무엇일까?</title>
   	<link rel="stylesheet" href="css/bootstrap.css">
   	<link rel="stylesheet" href="css/stylesheet.css">
   </head>
   <body>
-  	   <style type="text/css">
+  	  <!-- <style type="text/css">
   	   	  .jumbotron{
   	   	  	  background-image: url('images/jumbotronBackground.jpg');
   	   	  	  background-size: cover;
   	   	  	  text-shadow: black 0.2em 0.2em 0.2em;
   	   	  	  color: white;
-  	   	  }
+  	   	  } -->
   	   	</style>
   	   	<nav class="navbar navbar-default">
   	   		<div class="container-fluid">
@@ -40,7 +40,9 @@
   	   		    	        </ul>
   	   		            </li>
   	   		            </li>
-  	   		    		<li class="active"><a href="#">아직 미정입니다<span class="sr-only"></span></a></li>
+  	   		    		<li class="active"><a href="\index.html">인트로<span class="sr-only"></span></a></li>
+                  <li><a href="lecture.html">키보드 강의</a></li>
+                  <li><a href="instructor.html">제작 과정</a></li>
   	   		    		<li><a href="instructor.html">콩손이란 누구인가?</a></li>
   	   		        </ul>
   	   		    <ul class="nav navbar-nav navbar-right">
@@ -66,63 +68,66 @@
         <div class="container">
        	   <div class="jumbotron">
        	   	 <h1 class="text-center">keyboard을 소개합니다.</h1>
-       	   	 <p class="text-center">키보드는 단순한 입력 장치가 아닙니다.</p>
-       	   	 <p class="text-center"><a class="btn btn-primary btn-lg" href="https://heroesofthestorm.com/ko-kr/" role="button">시공의 폭풍 속으로</a></p>
+       	   	 <!-- <p class="text-center">키보드는 단순한 입력 도구가 아닙니다</p>
+       	   	 <p class="text-center"><a class="btn btn-primary btn-lg" href="https://heroesofthestorm.com/ko-kr/" role="button">시공의 폭풍 속으로</a></p> -->
        	   	</div>
 
        	   	<div class="row">
        	   	    <div class="col-md-4">
-       	   		    <h4>키보드의 특징</h4>
-       	   		    <p>키보드는 말그대로 입력 장치지만 우리는 그 입력장치에서 즐거움을 찾을려고 합니다</p>
-       	   		    <p><a class="btn btn-default" data-target="#modal1" data-toggle="modal">자세히 알아보기</a></p>
+       	   		    <h4>키보드란?</h4>
+       	   		    <p>컴퓨터 키(key)가 일정한 규격에 따라<br> 
+                  배열되어 있는 입력 장치입니다</p>
+       	   		    <p><a class="btn btn-default" href="lecture.html?lectureName=keyboard">자세히 알아보기</a></p>
        	   		 
        	     	</div>
        	     	<div class="col-md-4">
-       	   		        <h4>스테빌라이저의 특징</h4>
-       	   		        <p>보통 키보드에서 긴 키들을 누를때 자연스럽게 눌릴수 있도록 도와줍니다</p>
-       	   		        <p><a class="btn btn-default" data-target="#modal2" data-toggle="modal">자세히 알아보기</a></p>
+       	   		        <h4>스테빌라이저란?</h4>
+       	   		        <p>보통 키보드에서 긴 키들을 누를때<br> 
+                      자연스럽게 눌릴수 있도록 도와줍니다</p>
+       	   		        <p><a class="btn btn-default" href="lecture.html?lectureName=keyboard">자세히 알아보기</a></p>
        	   		 </div>
        	   		<div class="col-md-4">
-       	   		    <h4>스위치의 특징</h4>
-       	   		    <p>보통 기계식 스위치는 접점부와 슬라이더 스프링으로 이루어져 있습니다</p>
-       	   		    <p><a class="btn btn-default" data-target="#modal3" data-toggle="modal">자세히 알아보기</a></p>
+       	   		    <h4>스위치란?</h4>
+       	   		    <p>키보드에선 축이라고 불리기도 하며<br>
+                  정확히는 키보드에서 입력 역할을 한다</p>
+       	   		    <p><a class="btn btn-default" href="lecture.html?lectureName=keyboard">자세히 알아보기</a></p>
        	   		</div>    
        	   	  </div>
        	    <hr>
        	    <div class="panel panel-primary">
        		<div class="panel-heading">
        			<h3 class="panel-title"><span class="glyphicon glyphicon-pencil"></span>
-       		    &nbsp;&nbsp;최신 키보드 목록</h3>
+       		    &nbsp;&nbsp;최신 키보드 소식</h3>
        	    </div>
        	    <div class="panel-body">
        	    	<div class="media">
        	    		<div class="media-left">
-       	    		    <a href="lecture.html?lectureName=keyboard"><img src="images/monster.jpg" id="imagepreview" style="width: 90px; height: 64px;" alt="키보드 강의 이미지"></a>
+       	    		    <a href="lecture.html?lectureName=keyboard"><img src="images/g915.gif" id="imagepreview" style="width: 110px; height: 64px;" alt="키보드 강의 이미지"></a>
        	    		</div>
        	    		<div class="media-body">
-       	    			<h4 class="media-heading"><a href="lecture.html?lectureName=keyboard">키보드 기초 강의</a>&nbsp;<span class="badge">New</span></h4>
-       	    			키보드는 종류가 매우 많고 생각보다 복잡합니다 사실상 기초 강의하나로는 이해하기 어려울수도 있는점 참고하시기 바랍니다.
+       	    			<h4 class="media-heading"><a data-target="#modal1" data-toggle="modal">로지텍 g915</a>&nbsp;<span class="badge">New</span></h4>
+       	    			로지텍에서 이번에 스텝 스컬쳐 2를 적용하지 않은 새로운 키보드를 출시 했습니다
        	    	</div>
        	    </div>
        	    <hr>
        	    <div class="media">
        	    		<div class="media-left">
-       	    		    <a href="lecture.html?lectureName=switch"><img src="images/monster.jpg" id="imagepreview" style="width: 90px; height: 64px;" alt="키보드 강의 이미지"></a>
+       	    		    <a href="lecture.html?lectureName=switch"><img src="images/alu xo v2.png" id="imagepreview" style="width: 110px; height: 64px;" alt="키보드 강의 이미지"></a>
        	    		</div>
        	    		<div class="media-body">
-       	    			<h4 class="media-heading"><a href="lecture.html?lectureName=switch">스위치 기초 강의</a>&nbsp;<span class="badge">New</span></h4>
-       	    			스위치는 종류가 매우 많지만 구조는 생각보다 간단합니다. 물론 스위치 제각각 구조도 다 다르다는점 참고하시기 바랍니다.
+       	    			<h4 class="media-heading"><a data-target="#modal2" data-toggle="modal">몬스타기어 alu xo v2</a>&nbsp;<span class="badge">New</span></h4>
+       	    			국내에서 처음으로 황동 보강판에 알루 하우징을 달은 키보드가 나올거 같습니다.
        	    	</div>
        	    </div>
        	    <hr>
        	    <div class="media">
        	    		<div class="media-left">
        	    		    <a href="lecture.html?lectureName=stablizer">
-       	    		    	<img class="media-object" src="images/monster.jpg" id="imagepreview" style="width: 90px; height: 64px;" alt="키보드 강의 이미지"></a>
+       	    		    	<img class="media-object" src="images/g pro x.jpeg" id="imagepreview" style="width: 110px; height: 64px;" alt="키보드 강의 이미지"></a>
        	    		</div>
        	    		<div class="media-body">
-       	    			<h4 class="media-heading"><a href="lecture.html?lectureName=stablizer">스테빌라이저 기초 강의</a>&nbsp;<span class="badge">New</span></h4>
-       	    			스테빌라이저는 생각보다 종류가 한정되어 있습니다
+       	    			<h4 class="media-heading"><a data-target="#modal3" data-toggle="modal">로지텍 g pro x</a>&nbsp;<span class="badge">New</span></h4>
+       	    			로지텍에서 드디어 키캡 호환이 가능한 키보드를 출시 했습니다. 핫스왑은 덤입니다.
        	    	    </div>
        	        </div>
        	      </div>
@@ -163,14 +168,14 @@
         		<div class="modal-dialog">
         			<div class="modal-content">
         				<div class="modal-header">
-        					키보드의 특징
+        					로지텍 g915
         					<button class="close" data-dismiss="modal">&times;</button>
         				</div>
         				<div class="modal-body" style="text-align: center;">
-        					보통 사람들의 키보드에 대한 인식은 단순 입력장치에 불과합니다<br>
-        					그리고 그 키보드에 돈을 투자하고 꾸미는것을 마땅해 하지 않습니다<br>
-        					저는 그것에 대해 불만이 많습니다!<br><br>
-        					<img src="images/monster.jpg" id="imagepreview" style="width: 455px; height: 256px;">
+        					이번에 로지텍에서 스텝 스컬쳐2를 적용시키지 않은 키보드를 출시했습니다<br>
+        					특징은 블루트스에 풀배열 키보드, 매크로 키가 있습니다<br>
+        					개인적으로 궁금한 제품입니다<br><br>
+        					<img src="images/g915.gif" id="imagepreview" style="width: 455px; height: 256px;">
         			    </div>
         			</div>
         	    </div>
@@ -181,14 +186,15 @@
         		<div class="modal-dialog">
         			<div class="modal-content">
         				<div class="modal-header">
-        					키보드의 특징
+        					몬스타기어 alu xo v2
         					<button class="close" data-dismiss="modal">&times;</button>
         				</div>
         				<div class="modal-body" style="text-align: center;">
-        					보통 큰 키를 누를때 뭔가 철심소리가 들리실 겁니다<br>
-        					큰 키들의 아예 좌측 혹은 우측을 눌러보시면 더 잘 들리고 느낌도 사뭇 다릅니다<br>
-        					그게 바로 스테빌라이저라는 부품이 있어서 입니다<br><br>
-        					<img src="images/monster.jpg" id="imagepreview" style="width: 455px; height: 256px;">
+        					이번에 몬스타기어에서 몬스타기어 알루 xo v2 제품을 출시했습니다<br>
+        					특징은 국내 기성품 최초로 황동 보강판을 사용한 키보드라는겁니다<br>
+        					디자인도 제 기준에서는 나름 깔끔하고 기대되는 키보드입니다<br>
+                  <br>
+        					<img src="images/alu xo v2.png" id="imagepreview" style="width: 455px; height: 256px;">
         			    </div>
         			</div>
         	    </div>
@@ -199,14 +205,15 @@
         		<div class="modal-dialog">
         			<div class="modal-content">
         				<div class="modal-header">
-        					키보드의 특징
+        					로지텍 g pro x
         					<button class="close" data-dismiss="modal">&times;</button>
         				</div>
         				<div class="modal-body" style="text-align: center;">
-        					기계식 스위치는 종류가 매우 많습니다<br>
-        					보통 접점부와 슬라이더로 이루어져 있습니다<br>
-        					우리나라에서 대중적인 스위치로는 오테뮤와 체리가 있습니다<br><br>
-        					<img src="images/monster.jpg" id="imagepreview" style="width: 455px; height: 256px;">
+        					로지텍에서 드디어 키캡 호환이 가능한 키보드를 출시 했습니다.<br>
+        					핫스왑은 덤이고 스위치는 기존 로머지 스위치가 아닌 gx 스위치입니다<br>
+        					특이하게 기존 g pro와는 달리 한글 각인이 레이저 각인입니다<br>
+                  <br>
+        					<img src="images/g pro x.jpeg" id="imagepreview" style="width: 455px; height: 256px;">
         			    </div>
         			</div>
         	    </div>
