--- a/outro/instructor.html
+++ b/outro/instructor.html
@@ -57,7 +57,9 @@
                         </ul>
                       </li>
                       </li>
-                  <li class="active"><a href="#">아직 미정입니다<span class="sr-only"></span></a></li>
+                  <li class="active"><a href="\index.html">인트로<span class="sr-only"></span></a></li>
+                  <li><a href="lecture.html">키보드 강의</a></li>
+                  <li><a href="instructor.html">제작 과정</a></li>
                   <li><a href="instructor.html">콩손이란 누구인가?</a></li>
                   </ul>
               <ul class="nav navbar-nav navbar-right">
@@ -79,6 +81,7 @@
                 </div>
             </div>
         </nav>
+        
         <div class="container">
            <div class="row">
             <div class="clo-xs-12">
