--- a/outro/lecture.html
+++ b/outro/lecture.html
@@ -32,8 +32,10 @@
                         </ul>
                       </li>
                       </li>
-                  <li class="active"><a href="#">뭐할까<span class="sr-only"></span></a></li>
-                  <li><a href="instructor.html">그러게</a></li>
+                  <li class="active"><a href="\index.html">인트로<span class="sr-only"></span></a></li>
+                  <li><a href="lecture.html">키보드 강의</a></li>
+                  <li><a href="instructor.html">제작 과정</a></li>
+                  <li><a href="instructor.html">콩손이란 누구인가?</a></li>
                   </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
@@ -45,8 +47,14 @@
                         </ul>
                 </li>
                 </ul>
-  	   	        </div>
-  	   	    </div>
+                  <form class="navbar-form navbar-right">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="내용을 입력하세요.">
+                </div>
+                <button type="submit" class="btn btn-default">검색</button>
+              </form>
+                </div>
+            </div>
         </nav>
         <div class="container">
           <div class="row">
