--- a/outro/made.html
+++ b/outro/made.html
@@ -92,7 +92,7 @@
                 <div class="panel-heading">
                   <h3 class="panel-title">
                     <span class="glyphicon glyphicon-tags"></span>
-                    &nbsp;&nbsp;유튜버 콩손
+                    &nbsp;&nbsp;제작과정
                   </h3>
                   </div>
                   <div class="panel-body">
@@ -103,13 +103,13 @@
                         </a>
                       </div>
                       <div class="media-body">
-                        <h4 class="media-heading">콩손</h4><br>
-                            키보드를 좋아하고 오버워치도 좋아합니다.<br>
-                            왠만한 컴퓨터 주변기기는 다 좋아하신다고 보시면 됩니다<br>
-                            좋아하는 음식은 라면, 밥, 김치, 두부, 과일입니다<br>
-                            경기도에 거주하고 있으며 유튜브 활동을 하고 있습니다<br>
-                            취미겸 홈페이지 제작 활동을 하고 있습니다<br>
-                            문의는 swoojin1126@naver.com 으로 해주세요<br>
+                        <h4 class="media-heading">제작과정</h4><br>
+                            제작과정이 순탄치는 않았습니다<br>
+                            홈페이지 개발을 전문적으로 공부한것도 아니였지만<br>
+                            예전에 홈페이지를 만든 경험을 떠올려서<br>
+                            css와 html를 복습하면서 차근차근 만들었습니다<br>
+                            그래도 주변 지인의 도움덕에 이 정도까지 왔다고 생각합니다<br>
+                            홈페이지에 대한 문의는 swoojin1126@naver.com으로 해주세요<br>
                             회신이 안 오면 swoojin1127@gmail.com 으로 해주시기 바랍니다
 
                       </div>
@@ -119,9 +119,9 @@
                     <thead>
                       <tr>
                         <th></th>
-                        <th>강사</th>
-                        <th>번호</th>
-                        <th>제목</th>
+                        <th>제작자</th>
+                        <th>순서</th>
+                        <th>과정</th>
                         <th>일자</th>
 
                       </tr>
@@ -131,22 +131,71 @@
                         <th></th>
                         <td>콩손</td>
                         <td>1</td>
-                        <td><a href="lecture.html?lectureName=keyboard">키보드 기초 강좌</a></td>
-                        <td>2019-11-26</td>
+                        <td><a href="#">index.html 제작, 기초적인 사이트 틀 구성</a></td>
+                        <td>2019-9-7</td>
                       </tr>
                       <tr>
                         <th></th>
                         <td>콩손</td>
                         <td>2</td>
-                        <td><a href="lecture.html?lectureName=switch">스위치 기초 강좌</a></td>
-                        <td>2019-11-26</td>
+                        <td><a href="#">상단 수평 네비게이션 바 제작</a></td>
+                        <td>2019-9-14</td>
                       </tr>
                       <tr>
                         <th></th>
                         <td>콩손</td>
                         <td>3</td>
-                        <td><a href="lecture.html?lectureName=stablizer">스테빌라이저 기초 강좌</a></td>
-                        <td>2019-11-26</td>
+                        <td><a href="#">검색 창과 회원가입, 로그인 창 구현</a></td>
+                        <td>2019-9-21</td>
+                      </tr>
+                      <tr>
+                        <th></th>
+                        <td>콩손</td>
+                        <td>4</td>
+                        <td><a href="#">하단 푸터 구현,스타일 시트 제작</a></td>
+                        <td>2019-9-28</td>
+                      </tr>
+                      <tr>
+                        <th></th>
+                        <td>콩손</td>
+                        <td>5</td>
+                        <td><a href="#">모달을 이용한 최신 키보드 소식 창 구현</a></td>
+                        <td>2019-10-5</td>
+                      </tr>
+                      <tr>
+                        <th></th>
+                        <td>콩손</td>
+                        <td>6</td>
+                        <td><a href="#">검색 창과 회원가입, 로그인 창 구현</a></td>
+                        <td>2019-10-12</td>
+                      </tr>
+                      <tr>
+                        <th></th>
+                        <td>콩손</td>
+                        <td>7</td>
+                        <td><a href="#">홈페이지 인트로 구현</a></td>
+                        <td>2019-10-19</td>
+                      </tr>
+                      <tr>
+                        <th></th>
+                        <td>콩손</td>
+                        <td>8</td>
+                        <td><a href="#">네비게이션 바에 검색창 추가,강의에 댓글창 추가</a></td>
+                        <td>2019-10-26</td>
+                      </tr>
+                      <tr>
+                        <th></th>
+                        <td>콩손</td>
+                        <td>9</td>
+                        <td><a href="#">전체적인 틀 재정리, 디자인 다듬기</a></td>
+                        <td>2019-11-2</td>
+                      </tr>
+                      <tr>
+                        <th></th>
+                        <td>콩손</td>
+                        <td>10</td>
+                        <td><a href="#">좌측 수직 네비게이션바 제작</a></td>
+                        <td>2019-11-9</td>
                       </tr>
                     </tbody>
                   </table>
