--- a/outro/index.html
+++ b/outro/index.html
@@ -34,15 +34,19 @@
   	   		    	    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button"
   	   		    			    aria-haspopup="true" aria-expanded="false">소개<span class="caret"></span></a>
   	   		    			<ul class="dropdown-menu">
-  	   		    				<li><a href="lecture.html?lectureName=keyboard">키보드</a></li>
-  	   		    				<li><a href="lecture.html?lectureName=switch">스위치</a></li>
-  	   		    				<li><a href="lecture.html?lectureName=stablizer">스테빌라이저</a></li>
+  	   		    				<li><a href="lecture.html">키보드</a></li>
+  	   		    				<li><a href="lecture2.html">스위치</a></li>
+  	   		    				<li><a href="lecture3.html">스테빌라이저</a></li>
+                      <li><a href="lecture4.html">키캡</a></li>
+                      <li><a href="lecture5.html">보강판</a></li>
+                      <li><a href="lecture6.html">하우징</a></li>
+
   	   		    	        </ul>
   	   		            </li>
   	   		            </li>
   	   		    		<li class="active"><a href="\index.html">인트로<span class="sr-only"></span></a></li>
                   <li><a href="lecture.html">키보드 강의</a></li>
-                  <li><a href="instructor.html">제작 과정</a></li>
+                  <li><a href="made.html">제작 과정</a></li>
   	   		    		<li><a href="instructor.html">콩손이란 누구인가?</a></li>
   	   		        </ul>
   	   		    <ul class="nav navbar-nav navbar-right">
@@ -77,21 +81,40 @@
        	   		    <h4>키보드란?</h4>
        	   		    <p>컴퓨터 키(key)가 일정한 규격에 따라<br> 
                   배열되어 있는 입력 장치입니다</p>
-       	   		    <p><a class="btn btn-default" href="lecture.html?lectureName=keyboard">자세히 알아보기</a></p>
+       	   		    <p><a class="btn btn-default" href="lecture.html">자세히 알아보기</a></p>
        	   		 
        	     	</div>
        	     	<div class="col-md-4">
        	   		        <h4>스테빌라이저란?</h4>
        	   		        <p>보통 키보드에서 긴 키들을 누를때<br> 
                       자연스럽게 눌릴수 있도록 도와줍니다</p>
-       	   		        <p><a class="btn btn-default" href="lecture.html?lectureName=keyboard">자세히 알아보기</a></p>
-       	   		 </div>
+       	   		        <p><a class="btn btn-default" href="lecture2.html">자세히 알아보기</a></p>
+       	   		</div>
        	   		<div class="col-md-4">
-       	   		    <h4>스위치란?</h4>
-       	   		    <p>키보드에선 축이라고 불리기도 하며<br>
-                  정확히는 키보드에서 입력 역할을 한다</p>
-       	   		    <p><a class="btn btn-default" href="lecture.html?lectureName=keyboard">자세히 알아보기</a></p>
-       	   		</div>    
+       	   		       <h4>스위치란?</h4>
+       	   		       <p>키보드에선 축이라고 불리기도 하며<br>
+                     정확히는 키보드에서 입력 역할을 한다</p>
+       	   		       <p><a class="btn btn-default" href="lecture3.html"> 자세히 알아보기</a></p>
+       	   		</div>
+              <div class="col-md-4">
+                      <h4>키캡이란?</h4>
+                      <p>보통 키보드에서 긴 키들을 누를때<br> 
+                      자연스럽게 눌릴수 있도록 도와줍니다</p>
+                      <p><a class="btn btn-default" href="lecture4.html">자세히 알아보기</a></p>
+               </div>
+               <div class="col-md-4">
+                      <h4>보강판이란?</h4>
+                      <p>보통 키보드에서 긴 키들을 누를때<br> 
+                      자연스럽게 눌릴수 있도록 도와줍니다</p>
+                      <p><a class="btn btn-default" href="lecture5.html">자세히 알아보기</a></p>
+               </div>
+               <div class="col-md-4">
+                      <h4>하우징이란?</h4>
+                      <p>보통 키보드에서 긴 키들을 누를때<br> 
+                      자연스럽게 눌릴수 있도록 도와줍니다</p>
+                      <p><a class="btn btn-default" href="lecture6.html">자세히 알아보기</a></p>
+               </div>
+
        	   	  </div>
        	    <hr>
        	    <div class="panel panel-primary">
@@ -138,28 +161,17 @@
        			<br>
        			<div class="row">
        			    <div class="col-sm-2" style="text-align: center;"><h5>Copyright &copy; 2019</h5><h5>콩손(kongson)</h5></div>
-       			    <div class="col-sm-3"><h4>매니저 소개</h4><p>매니저는 바로 잼으로 특징은 딸기잼을 좋아한다</p></div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;">스테빌라이저</h4>
-       			    	<div class="list-group">
-       			    		<a href="#" class="list-group-item">소개</a>
-       			    		<a href="https://www.youtube.com/watch?v=zeSRfcy3HkA" class="list-group-item">윤활법</a>
-       			    		<a href="#" class="list-group-item">장착법</a>
-       			    	</div>
-       			    </div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;">스위치</h4>
-       			    	<div class="list-group">
-       			    		<a href="#" class="list-group-item">소개</a>
-       			    		<a href="https://www.youtube.com/watch?v=j1X0sDiNEtk" class="list-group-item">윤활법</a>
-       			    		<a href="#" class="list-group-item">종류</a>
-       			    	</div>
-       			    </div>
+       			    <div class="col-sm-2"><h4>같이 도와준 지인분</h4><p>Ubuntu 18.04.04 LTS</p></div>
        			    <div class="col-sm-2"><h4 style="text-align: center;">SNS</h4>
-       			    	<div class="list-group">
-       			    		<a href="https://www.facebook.com" class="list-group-item">페이스북</a>
-       			    		<a href="https://www.youtube.com/channel/UCwffZtUBOo73OPm9ytUksYw" class="list-group-item">유튜브</a>
+                  <div class="list-group">
+                    <a href="https://www.facebook.com" class="list-group-item">페이스북</a>
+                    <a href="https://www.youtube.com/channel/UCwffZtUBOo73OPm9ytUksYw" class="list-group-item">유튜브</a>
                         </div>
        			    </div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;"><span class="glyphicon glyphicon-ok"></span>by 콩손</h4></div>
+
+                <div class="col-sm-2"><h4>문의 메일</h4><p>swoojin1126@naver.com</p><p>swoojin1127@gmail.com</p></div>
+                <div class="col-sm-2"><h4>사이트 공지</h4><p>해당 사이트는 상업 목적으로 먼든 사이트가 아님을 알립니다</p></div>
+       			    <div class="col-sm-2"><h4 ><span class="glyphicon glyphicon-ok"></span>by 콩손</h4></div>
                 </div>
             </div>
         </footer>
