--- a/outro/lecture4.html
+++ b/outro/lecture4.html
@@ -117,13 +117,13 @@ color: white;
 
 <ul class="vertical">
 
-<li class="vertical"><a class="vertical active" href="lecture.html">키보드</a></li>
+<li class="vertical"><a class="vertical" href="lecture.html">키보드</a></li>
 
 <li class="vertical"><a class="vertical" href="lecture2.html">스위치</a></li>
 
 <li class="vertical"><a class="vertical" href="lecture3.html">스테빌라이저</a></li>
 
-<li class="vertical"><a class="vertical" href="lecture4.html">키캡</a></li>
+<li class="vertical"><a class="vertical active" href="lecture4.html">키캡</a></li>
 
 <li class="vertical"><a class="vertical" href="lecture5.html">보강판</a></li>
 
@@ -134,24 +134,22 @@ color: white;
         <div class="container">
           <div class="row">
             <ul class="list-group">
-
-    <details>
-      <summary a href="#" class="list-group-item">1강 키보드의 용도</summary></a>
+              <details>
+      <summary a href="#" class="list-group-item">1강 키캡의 용도</summary></a>
          <h2>분투행님 사랑함다</h2>
          <p>사랑해요 분투 행님</p> 
     </details>
     <details>
-     <summary a href="#" class="list-group-item">2강 키보드의 역사</summary></a>
+     <summary a href="#" class="list-group-item">2강 키캡의 종류</summary></a>
      <h2>분투행님 사랑함다</h2>
      <p>사랑해요 분투 행님</p>
      </details>
     <details>
-      <summary a href="#" class="list-group-item">3강 키보드의 구성 요소</summary></a>
+      <summary a href="#" class="list-group-item">3강 키캡이 미치는 영향</summary></a>
          <h2>분투행님 사랑함다</h2>
          <p>사랑해요 분투 행님</p> 
     </details>
-
-        </ul>
+            </ul>
           </div>
           <div class="row">
               <div class="embed-responsive embed-responsive-16by9">
@@ -161,9 +159,9 @@ color: white;
             <hr>
             <div class="row">
               <p>
-                  키보드는 생각보다 많은 걸로 이루어져 있습니다
+                  첫번재 강의를 시작하기 전에 우리가 키보드를 언제 쓰는지 생각해 봅시다.
               </p>
-             
+            
             </div>
             <div class="container">
             <hr>
