--- a/outro/index.html
+++ b/outro/index.html
@@ -44,7 +44,7 @@
   	   		    	        </ul>
   	   		            </li>
   	   		            </li>
-  	   		    		<li class="active"><a href="\index.html">인트로<span class="sr-only"></span></a></li>
+  	   		    		<li class="active"><a href="http://www.kongson.kro.kr/index.html">인트로<span class="sr-only"></span></a></li>
                   <li><a href="lecture.html">키보드 강의</a></li>
                   <li><a href="made.html">제작 과정</a></li>
   	   		    		<li><a href="instructor.html">콩손이란 누구인가?</a></li>
