--- a/outro/lecture2.html
+++ b/outro/lecture2.html
@@ -35,7 +35,7 @@
                         </ul>
                       </li>
                       </li>
-                  <li class="active"><a href="\index.html">인트로<span class="sr-only"></span></a></li>
+                  <li class="active"><a href="http://www.kongson.kro.kr/index.html">인트로<span class="sr-only"></span></a></li>
                   <li><a href="lecture.html">키보드 강의</a></li>
                   <li><a href="made.html">제작 과정</a></li>
                   <li><a href="instructor.html">콩손이란 누구인가?</a></li>
@@ -136,18 +136,21 @@ color: white;
             <ul class="list-group">
       <details>
       <summary a href="#" class="list-group-item">1강 스위치의 용도</summary></a>
-         <h2>분투행님 사랑함다</h2>
-         <p>사랑해요 분투 행님</p> 
+         <h3>스위치의 용도</h3>
+         <p>이건 두 말할것도 없이 입력에 중점을 두고 있다<br>
+         하지만 이 스위치 덕이 다양한 키감을 느낄 수 있다</p> 
       </details>
       <details>
-      <summary a href="#" class="list-group-item">2강 스위치의 역사</summary></a>
-         <h2>분투행님 사랑함다</h2>
-         <p>사랑해요 분투 행님</p>
+      <summary a href="#" class="list-group-item">2강 스위치의 정의</summary></a>
+         <h3>스위치의 정의</h3>
+         <p>전원을 연결하거나 제거하는데 사용하거나, 다른 옵션을 선택하는데 사용되는 장치이다<br>
+         기계식키보드에선 축이라고 불린다</p>
       </details>
       <details>
       <summary a href="#" class="list-group-item">3강 스위치의 종류</summary></a>
-         <h2>분투행님 사랑함다</h2>
-         <p>사랑해요 분투 행님</p> 
+         <h3>스위치의 종류</h3>
+         <p>보통 우리나라에서 대중적으로 퍼진건 카일, 체리, 오테뮤, 게이트론 정도이다.<br>
+         하지만 실제로 알프스, 후타바, nec, nmb, 후지쯔, 옴론 등등 스위치가 매우 많다</p> 
        </details>
             </ul>
           </div>
@@ -176,32 +179,21 @@ color: white;
                 <hr>          
         </div>
        	<footer style="background-color: #000000; color: #ffffff">
-       		<div class="container">
-       			<br>
-       			<div class="row">
-       			    <div class="col-sm-2" style="text-align: center;"><h5>Copyright &copy; 2019</h5><h5>콩손(kongson)</h5></div>
-       			    <div class="col-sm-4"><h4>매니저 소개</h4><p>매니저는 바로 잼으로 특징은 딸기잼을 좋아한다</p></div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;">스테빌라이저</h4>
-       			    	<div class="list-group">
-       			    		<a href="#" class="list-group-item">소개</a>
-       			    		<a href="https://www.youtube.com/watch?v=zeSRfcy3HkA" class="list-group-item">윤활법</a>
-       			    		<a href="#" class="list-group-item">장착법</a>
-       			    	</div>
-       			    </div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;">스위치</h4>
-       			    	<div class="list-group">
-       			    		<a href="#" class="list-group-item">소개</a>
-       			    		<a href="https://www.youtube.com/watch?v=j1X0sDiNEtk" class="list-group-item">윤활법</a>
-       			    		<a href="#" class="list-group-item">종류</a>
-       			    	</div>
-       			    </div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;">SNS</h4>
-       			    	<div class="list-group">
-       			    		<a href="https://www.facebook.com" class="list-group-item">페이스북</a>
-       			    		<a href="https://www.youtube.com/channel/UCwffZtUBOo73OPm9ytUksYw" class="list-group-item">유튜브</a>
+          <div class="container">
+            <br>
+            <div class="row">
+                <div class="col-sm-2" style="text-align: center;"><h5>Copyright &copy; 2019</h5><h5>콩손(kongson)</h5></div>
+                <div class="col-sm-2"><h4>같이 도와준 지인분</h4><p>Ubuntu 18.04.04 LTS</p></div>
+                <div class="col-sm-2"><h4 style="text-align: center;">SNS</h4>
+                  <div class="list-group">
+                    <a href="https://www.facebook.com" class="list-group-item">페이스북</a>
+                    <a href="https://www.youtube.com/channel/UCwffZtUBOo73OPm9ytUksYw" class="list-group-item">유튜브</a>
                         </div>
-       			    </div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;"><span class="glyphicon glyphicon-ok"></span>by 콩손</h4></div>
+                </div>
+
+                <div class="col-sm-2"><h4>문의 메일</h4><p>swoojin1126@naver.com</p><p>swoojin1127@gmail.com</p></div>
+                <div class="col-sm-2"><h4>사이트 공지</h4><p>해당 사이트는 상업 목적으로 먼든 사이트가 아님을 알립니다</p></div>
+                <div class="col-sm-2"><h4 ><span class="glyphicon glyphicon-ok"></span>by 콩손</h4></div>
                 </div>
             </div>
         </footer>
