--- a/outro/lecture3.html
+++ b/outro/lecture3.html
@@ -35,7 +35,7 @@
                         </ul>
                       </li>
                       </li>
-                  <li class="active"><a href="\index.html">인트로<span class="sr-only"></span></a></li>
+                  <li class="active"><a href="http://www.kongson.kro.kr/index.html">인트로<span class="sr-only"></span></a></li>
                   <li><a href="lecture.html">키보드 강의</a></li>
                   <li><a href="made.html">제작 과정</a></li>
                   <li><a href="instructor.html">콩손이란 누구인가?</a></li>
@@ -136,18 +136,22 @@ color: white;
             <ul class="list-group">
               <details>
       <summary a href="#" class="list-group-item">1강 스테빌라이저의 용도</summary></a>
-         <h2>분투행님 사랑함다</h2>
-         <p>사랑해요 분투 행님</p> 
+         <h3>스테빌라이저의 용도</h3>
+         <p>긴 키들을 안정적이로 일정한 촉감으로 누를 수 있게 도와준다<br>
+         다만 잡소리가 생겨 따로 윤활을 하기도 한다</p> 
     </details>
     <details>
      <summary a href="#" class="list-group-item">2강 스테빌라이저의 구성 요소</summary></a>
-     <h2>분투행님 사랑함다</h2>
-     <p>사랑해요 분투 행님</p>
+     <h3>스테빌라이저의 구성 요소</h3>
+     <p>보통의 스테빌라이저는 철심, 용두로 이루어져 있다, 스테빌라이저도 종류가 매우 많은데<br>
+     보통 국내 키보드 시장에서 쓰이는 스테빌라이저 방식은 체리식, 마제식, 하이브리드가 대표적이다</p>
      </details>
     <details>
       <summary a href="#" class="list-group-item">3강 스테빌라이저의 윤활 방법</summary></a>
-         <h2>분투행님 사랑함다</h2>
-         <p>사랑해요 분투 행님</p> 
+         <h3>스테빌라이저의 윤활 방법</h3>
+         <p>위 1강에서 언급했듯이 특유의 잡소리가 생긴다. 흔히 말하는 철컹소리다<br>
+          이걸 잡기 위해 오일이나 구리스를 철심이나 용두에 바른다<br>
+          윤활 방식은 <a target="_blank" href="https://www.youtube.com/watch?v=zeSRfcy3HkA&t=14s">여기</a>를 참고하기 바란다</p> 
     </details>
             </ul>
           </div>
@@ -176,32 +180,21 @@ color: white;
                 <hr>          
         </div>
        	<footer style="background-color: #000000; color: #ffffff">
-       		<div class="container">
-       			<br>
-       			<div class="row">
-       			    <div class="col-sm-2" style="text-align: center;"><h5>Copyright &copy; 2019</h5><h5>콩손(kongson)</h5></div>
-       			    <div class="col-sm-4"><h4>매니저 소개</h4><p>매니저는 바로 잼으로 특징은 딸기잼을 좋아한다</p></div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;">스테빌라이저</h4>
-       			    	<div class="list-group">
-       			    		<a href="#" class="list-group-item">소개</a>
-       			    		<a href="https://www.youtube.com/watch?v=zeSRfcy3HkA" class="list-group-item">윤활법</a>
-       			    		<a href="#" class="list-group-item">장착법</a>
-       			    	</div>
-       			    </div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;">스위치</h4>
-       			    	<div class="list-group">
-       			    		<a href="#" class="list-group-item">소개</a>
-       			    		<a href="https://www.youtube.com/watch?v=j1X0sDiNEtk" class="list-group-item">윤활법</a>
-       			    		<a href="#" class="list-group-item">종류</a>
-       			    	</div>
-       			    </div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;">SNS</h4>
-       			    	<div class="list-group">
-       			    		<a href="https://www.facebook.com" class="list-group-item">페이스북</a>
-       			    		<a href="https://www.youtube.com/channel/UCwffZtUBOo73OPm9ytUksYw" class="list-group-item">유튜브</a>
+          <div class="container">
+            <br>
+            <div class="row">
+                <div class="col-sm-2" style="text-align: center;"><h5>Copyright &copy; 2019</h5><h5>콩손(kongson)</h5></div>
+                <div class="col-sm-2"><h4>같이 도와준 지인분</h4><p>Ubuntu 18.04.04 LTS</p></div>
+                <div class="col-sm-2"><h4 style="text-align: center;">SNS</h4>
+                  <div class="list-group">
+                    <a href="https://www.facebook.com" class="list-group-item">페이스북</a>
+                    <a href="https://www.youtube.com/channel/UCwffZtUBOo73OPm9ytUksYw" class="list-group-item">유튜브</a>
                         </div>
-       			    </div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;"><span class="glyphicon glyphicon-ok"></span>by 콩손</h4></div>
+                </div>
+
+                <div class="col-sm-2"><h4>문의 메일</h4><p>swoojin1126@naver.com</p><p>swoojin1127@gmail.com</p></div>
+                <div class="col-sm-2"><h4>사이트 공지</h4><p>해당 사이트는 상업 목적으로 먼든 사이트가 아님을 알립니다</p></div>
+                <div class="col-sm-2"><h4 ><span class="glyphicon glyphicon-ok"></span>by 콩손</h4></div>
                 </div>
             </div>
         </footer>
