--- a/outro/lecture.html
+++ b/outro/lecture.html
@@ -35,7 +35,7 @@
                         </ul>
                       </li>
                       </li>
-                  <li class="active"><a href="\index.html">인트로<span class="sr-only"></span></a></li>
+                  <li class="active"><a href="http://www.kongson.kro.kr/index.html">인트로<span class="sr-only"></span></a></li>
                   <li><a href="lecture.html">키보드 강의</a></li>
                   <li><a href="made.html">제작 과정</a></li>
                   <li><a href="instructor.html">콩손이란 누구인가?</a></li>
@@ -136,19 +136,21 @@ color: white;
             <ul class="list-group">
 
     <details>
-      <summary a href="#" class="list-group-item">1강 키보드의 용도</summary></a>
-         <h2>분투행님 사랑함다</h2>
-         <p>사랑해요 분투 행님</p> 
+      <summary a href="#" class="list-group-item">1강 키보드의 정의</summary></a>
+         <h3>키보드의 정의</h3>
+         <p>키보드는 타자기의 자판과 비슷한 모양새를 띤 pc의 입력장치중 하나입니다. 설령 기계식 키보드라고 할지라도 목적은 입력에 있습니다.</p> 
     </details>
     <details>
-     <summary a href="#" class="list-group-item">2강 키보드의 역사</summary></a>
-     <h2>분투행님 사랑함다</h2>
-     <p>사랑해요 분투 행님</p>
+     <summary a href="#" class="list-group-item">2강 기계식 키보드의 역사</summary></a>
+     <h3>기계식 키보드의 역사</h3>
+     <p>기계식 키보드 자체는 1970년대부터 사용된 꽤나 오래된 방식입니다.<br>
+     1990년대에 들어서 맴브레인 키보드가 보급되어 기계식키보드는 차츰 가라앉다가 2010년도에 다시 폭팔적으로 생산되기 시작했습니다.</p>
      </details>
     <details>
-      <summary a href="#" class="list-group-item">3강 키보드의 구성 요소</summary></a>
-         <h2>분투행님 사랑함다</h2>
-         <p>사랑해요 분투 행님</p> 
+      <summary a href="#" class="list-group-item">3강 기계식 키보드의 구성 요소</summary></a>
+         <h3>기계식 키보드의 구성 요소</h3>
+         <p>보통 기계식 키보드는 하우징, 보강판, 키캡, 스위치, 기판이 하나를 이룬다<br>
+         다만 모든 기계식 키보드가 그런건 아니고 하우징과 보강판이 일체형인 비키 타입도 있다</p> 
     </details>
 
         </ul>
@@ -178,32 +180,21 @@ color: white;
                 <hr>          
         </div>
        	<footer style="background-color: #000000; color: #ffffff">
-       		<div class="container">
-       			<br>
-       			<div class="row">
-       			    <div class="col-sm-2" style="text-align: center;"><h5>Copyright &copy; 2019</h5><h5>콩손(kongson)</h5></div>
-       			    <div class="col-sm-4"><h4>매니저 소개</h4><p>매니저는 바로 잼으로 특징은 딸기잼을 좋아한다</p></div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;">스테빌라이저</h4>
-       			    	<div class="list-group">
-       			    		<a href="#" class="list-group-item">소개</a>
-       			    		<a href="https://www.youtube.com/watch?v=zeSRfcy3HkA" class="list-group-item">윤활법</a>
-       			    		<a href="#" class="list-group-item">장착법</a>
-       			    	</div>
-       			    </div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;">스위치</h4>
-       			    	<div class="list-group">
-       			    		<a href="#" class="list-group-item">소개</a>
-       			    		<a href="https://www.youtube.com/watch?v=j1X0sDiNEtk" class="list-group-item">윤활법</a>
-       			    		<a href="#" class="list-group-item">종류</a>
-       			    	</div>
-       			    </div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;">SNS</h4>
-       			    	<div class="list-group">
-       			    		<a href="https://www.facebook.com" class="list-group-item">페이스북</a>
-       			    		<a href="https://www.youtube.com/channel/UCwffZtUBOo73OPm9ytUksYw" class="list-group-item">유튜브</a>
+          <div class="container">
+            <br>
+            <div class="row">
+                <div class="col-sm-2" style="text-align: center;"><h5>Copyright &copy; 2019</h5><h5>콩손(kongson)</h5></div>
+                <div class="col-sm-2"><h4>같이 도와준 지인분</h4><p>Ubuntu 18.04.04 LTS</p></div>
+                <div class="col-sm-2"><h4 style="text-align: center;">SNS</h4>
+                  <div class="list-group">
+                    <a href="https://www.facebook.com" class="list-group-item">페이스북</a>
+                    <a href="https://www.youtube.com/channel/UCwffZtUBOo73OPm9ytUksYw" class="list-group-item">유튜브</a>
                         </div>
-       			    </div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;"><span class="glyphicon glyphicon-ok"></span>by 콩손</h4></div>
+                </div>
+
+                <div class="col-sm-2"><h4>문의 메일</h4><p>swoojin1126@naver.com</p><p>swoojin1127@gmail.com</p></div>
+                <div class="col-sm-2"><h4>사이트 공지</h4><p>해당 사이트는 상업 목적으로 먼든 사이트가 아님을 알립니다</p></div>
+                <div class="col-sm-2"><h4 ><span class="glyphicon glyphicon-ok"></span>by 콩손</h4></div>
                 </div>
             </div>
         </footer>
