--- a/outro/lecture4.html
+++ b/outro/lecture4.html
@@ -35,7 +35,7 @@
                         </ul>
                       </li>
                       </li>
-                  <li class="active"><a href="\index.html">인트로<span class="sr-only"></span></a></li>
+                  <li class="active"><a href="http://www.kongson.kro.kr/index.html">인트로<span class="sr-only"></span></a></li>
                   <li><a href="lecture.html">키보드 강의</a></li>
                   <li><a href="made.html">제작 과정</a></li>
                   <li><a href="instructor.html">콩손이란 누구인가?</a></li>
@@ -135,19 +135,26 @@ color: white;
           <div class="row">
             <ul class="list-group">
               <details>
-      <summary a href="#" class="list-group-item">1강 키캡의 용도</summary></a>
-         <h2>분투행님 사랑함다</h2>
-         <p>사랑해요 분투 행님</p> 
+      <summary a href="#" class="list-group-item">1강 키캡의 정의</summary></a>
+         <h3>키캡의 정의</h3>
+         <p>스위치마다 덮을 수 있게 만든 뚜껑이다<br>
+            여담으로 이 키캡에 따라 키감이 많이 달라진다</p> 
     </details>
     <details>
-     <summary a href="#" class="list-group-item">2강 키캡의 종류</summary></a>
-     <h2>분투행님 사랑함다</h2>
-     <p>사랑해요 분투 행님</p>
+     <summary a href="#" class="list-group-item">2강 키캡의 각인</summary></a>
+     <h3>키캡의 각인</h3>
+     <p>정말 말 할게 많은 카테고리다<br>
+      일단 키캡의 인쇄방식에는 무각, 측각, 유각(정각)이 있다<br>
+      이 글자가 인쇄된 방식에는 실크 인쇄, 염료승화 인쇄, 레이저 인쇄, 이색사출, 음각, 인필드 등이 있다...</p>
      </details>
     <details>
-      <summary a href="#" class="list-group-item">3강 키캡이 미치는 영향</summary></a>
-         <h2>분투행님 사랑함다</h2>
-         <p>사랑해요 분투 행님</p> 
+      <summary a href="#" class="list-group-item">3강 키캡의 높이</summary></a>
+         <h3>키캡의 높이</h3>
+         <p>보통 키캡의 높이(프로파일)에 따라 키감이 달라진다<br>
+          키캡 높이는 체리, oem, dsa, sa, xda 등 매우 많다<br>
+          높이순으론 dsa = xda < 체리 < oem < sa 순이다.
+          국내에 대중화 된건 oem, 체리며 보통 저가형에는 oem 키캡이 들어간다<br>
+          여담으로 이번 콕스에서 sa 키캡을 사용한 키보드를 대거 출시했다</p> 
     </details>
             </ul>
           </div>
@@ -176,32 +183,21 @@ color: white;
                 <hr>          
         </div>
        	<footer style="background-color: #000000; color: #ffffff">
-       		<div class="container">
-       			<br>
-       			<div class="row">
-       			    <div class="col-sm-2" style="text-align: center;"><h5>Copyright &copy; 2019</h5><h5>콩손(kongson)</h5></div>
-       			    <div class="col-sm-4"><h4>매니저 소개</h4><p>매니저는 바로 잼으로 특징은 딸기잼을 좋아한다</p></div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;">스테빌라이저</h4>
-       			    	<div class="list-group">
-       			    		<a href="#" class="list-group-item">소개</a>
-       			    		<a href="https://www.youtube.com/watch?v=zeSRfcy3HkA" class="list-group-item">윤활법</a>
-       			    		<a href="#" class="list-group-item">장착법</a>
-       			    	</div>
-       			    </div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;">스위치</h4>
-       			    	<div class="list-group">
-       			    		<a href="#" class="list-group-item">소개</a>
-       			    		<a href="https://www.youtube.com/watch?v=j1X0sDiNEtk" class="list-group-item">윤활법</a>
-       			    		<a href="#" class="list-group-item">종류</a>
-       			    	</div>
-       			    </div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;">SNS</h4>
-       			    	<div class="list-group">
-       			    		<a href="https://www.facebook.com" class="list-group-item">페이스북</a>
-       			    		<a href="https://www.youtube.com/channel/UCwffZtUBOo73OPm9ytUksYw" class="list-group-item">유튜브</a>
+          <div class="container">
+            <br>
+            <div class="row">
+                <div class="col-sm-2" style="text-align: center;"><h5>Copyright &copy; 2019</h5><h5>콩손(kongson)</h5></div>
+                <div class="col-sm-2"><h4>같이 도와준 지인분</h4><p>Ubuntu 18.04.04 LTS</p></div>
+                <div class="col-sm-2"><h4 style="text-align: center;">SNS</h4>
+                  <div class="list-group">
+                    <a href="https://www.facebook.com" class="list-group-item">페이스북</a>
+                    <a href="https://www.youtube.com/channel/UCwffZtUBOo73OPm9ytUksYw" class="list-group-item">유튜브</a>
                         </div>
-       			    </div>
-       			    <div class="col-sm-2"><h4 style="text-align: center;"><span class="glyphicon glyphicon-ok"></span>by 콩손</h4></div>
+                </div>
+
+                <div class="col-sm-2"><h4>문의 메일</h4><p>swoojin1126@naver.com</p><p>swoojin1127@gmail.com</p></div>
+                <div class="col-sm-2"><h4>사이트 공지</h4><p>해당 사이트는 상업 목적으로 먼든 사이트가 아님을 알립니다</p></div>
+                <div class="col-sm-2"><h4 ><span class="glyphicon glyphicon-ok"></span>by 콩손</h4></div>
                 </div>
             </div>
         </footer>
