--- a/outro/made.html
+++ b/outro/made.html
@@ -99,7 +99,7 @@
                     <div class="media">
                       <div class="media-left">
                         <a href="#">
-                          <img class="media-object" src="images/shit.png" style="width: 480px; height: 270px; " alt="오버워치 픽창">
+                          <img class="media-object" src="images/메인 화면.png" style="width: 480px; height: 270px; " alt="오버워치 픽창">
                         </a>
                       </div>
                       <div class="media-body">
@@ -109,8 +109,8 @@
                             예전에 홈페이지를 만든 경험을 떠올려서<br>
                             css와 html를 복습하면서 차근차근 만들었습니다<br>
                             그래도 주변 지인의 도움덕에 이 정도까지 왔다고 생각합니다<br>
-                            홈페이지에 대한 문의는 swoojin1126@naver.com으로 해주세요<br>
-                            회신이 안 오면 swoojin1127@gmail.com 으로 해주시기 바랍니다
+                            나중에 한번 다시 갈아엎을 예정입니다<br>
+                            
 
                       </div>
                     </div>        
@@ -200,7 +200,7 @@
                     </tbody>
                   </table>
                   <div class="panel-footer">
-                    <blockquote>&nbsp;&nbsp;열심히 살아서 후회없이 살자!</blockquote>
+                    <blockquote>&nbsp;&nbsp;여러분들도 충분히 만드실 수 있습니다! 화이팅!</blockquote>
                   </div>  
                 </div>
               </div>  
@@ -223,7 +223,7 @@
                 </div>
 
                 <div class="col-sm-2"><h4>문의 메일</h4><p>swoojin1126@naver.com</p><p>swoojin1127@gmail.com</p></div>
-                <div class="col-sm-2"><h4>사이트 공지</h4><p>해당 사이트는 상업 목적으로 먼든 사이트가 아님을 알립니다</p></div>
+                <div class="col-sm-2"><h4>사이트 공지</h4><p>해당 사이트는 상업 목적으로 만든 사이트가 아님을 알립니다</p></div>
                 <div class="col-sm-2"><h4 ><span class="glyphicon glyphicon-ok"></span>by 콩손</h4></div>
                 </div>
             </div>
