--- a/outro/lecture2.html
+++ b/outro/lecture2.html
@@ -162,7 +162,7 @@ color: white;
             <hr>
             <div class="row">
               <p>
-                  첫번재 강의를 시작하기 전에 우리가 키보드를 언제 쓰는지 생각해 봅시다.
+                  스위치는 생각보다 다양하고 구조가 단순합니다
               </p>
      
             </div>
@@ -192,7 +192,7 @@ color: white;
                 </div>
 
                 <div class="col-sm-2"><h4>문의 메일</h4><p>swoojin1126@naver.com</p><p>swoojin1127@gmail.com</p></div>
-                <div class="col-sm-2"><h4>사이트 공지</h4><p>해당 사이트는 상업 목적으로 먼든 사이트가 아님을 알립니다</p></div>
+                <div class="col-sm-2"><h4>사이트 공지</h4><p>해당 사이트는 상업 목적으로 만든 사이트가 아님을 알립니다</p></div>
                 <div class="col-sm-2"><h4 ><span class="glyphicon glyphicon-ok"></span>by 콩손</h4></div>
                 </div>
             </div>
