--- a/outro/registerform.html
+++ b/outro/registerform.html
@@ -23,7 +23,7 @@
   text-align:center;
 }
 .btn-login {
-  background-color: #59B2E0;
+  background-color: #1CB94E;
   outline: none;
   color: #fff;
   font-size: 14px;
